--- a/TYR_2.0_18.5/ui/TYR_START_UNIRUB_TEAR.ui
+++ b/TYR_2.0_18.5/ui/TYR_START_UNIRUB_TEAR.ui
@@ -346,9 +346,9 @@ border-width:4px;</string>
       <property name="geometry">
        <rect>
         <x>930</x>
-        <y>50</y>
+        <y>110</y>
         <width>341</width>
-        <height>281</height>
+        <height>211</height>
        </rect>
       </property>
       <row>
@@ -386,19 +386,6 @@ border-width:4px;</string>
         <string/>
        </property>
       </row>
-      <column>
-       <property name="text">
-        <string>Spec.No</string>
-       </property>
-       <property name="font">
-        <font>
-         <family>Arial</family>
-         <pointsize>10</pointsize>
-         <weight>75</weight>
-         <bold>true</bold>
-        </font>
-       </property>
-      </column>
       <column>
        <property name="text">
         <string>Median(Kgf)</string>
@@ -464,7 +451,7 @@ border-width:4px;</string>
         </font>
        </property>
       </column>
-      <item row="0" column="1">
+      <item row="0" column="0">
        <property name="text">
         <string>100</string>
        </property>
@@ -475,7 +462,7 @@ border-width:4px;</string>
         </font>
        </property>
       </item>
-      <item row="0" column="2">
+      <item row="0" column="1">
        <property name="text">
         <string>123.8</string>
        </property>
@@ -486,7 +473,7 @@ border-width:4px;</string>
         </font>
        </property>
       </item>
-      <item row="0" column="3">
+      <item row="0" column="2">
        <property name="text">
         <string>1</string>
        </property>
@@ -497,22 +484,22 @@ border-width:4px;</string>
         </font>
        </property>
       </item>
-      <item row="1" column="1">
+      <item row="1" column="0">
        <property name="text">
         <string>200</string>
        </property>
       </item>
-      <item row="2" column="1">
+      <item row="2" column="0">
        <property name="text">
         <string>300</string>
        </property>
       </item>
-      <item row="3" column="1">
+      <item row="3" column="0">
        <property name="text">
         <string>400</string>
        </property>
       </item>
-      <item row="4" column="1">
+      <item row="4" column="0">
        <property name="text">
         <string>500</string>
        </property>
@@ -555,9 +542,9 @@ border-width:4px;</string>
      <widget class="QLCDNumber" name="lcdNumber">
       <property name="geometry">
        <rect>
-        <x>1060</x>
+        <x>1030</x>
         <y>360</y>
-        <width>161</width>
+        <width>191</width>
         <height>51</height>
        </rect>
       </property>
@@ -596,9 +583,9 @@ background-color: rgb(0, 0, 0);</string>
      <widget class="QLCDNumber" name="lcdNumber_2">
       <property name="geometry">
        <rect>
-        <x>1060</x>
+        <x>1030</x>
         <y>430</y>
-        <width>161</width>
+        <width>191</width>
         <height>51</height>
        </rect>
       </property>
@@ -812,7 +799,7 @@ border-width:4px;</string>
      <widget class="QLabel" name="label_22">
       <property name="geometry">
        <rect>
-        <x>980</x>
+        <x>940</x>
         <y>360</y>
         <width>81</width>
         <height>51</height>
@@ -839,8 +826,8 @@ border-width:4px;</string>
      <widget class="QLabel" name="label_23">
       <property name="geometry">
        <rect>
-        <x>980</x>
-        <y>430</y>
+        <x>940</x>
+        <y>420</y>
         <width>81</width>
         <height>51</height>
        </rect>
@@ -862,6 +849,80 @@ border-width:4px;</string>
       <property name="alignment">
        <set>Qt::AlignCenter</set>
       </property>
+     </widget>
+     <widget class="QLabel" name="label_19">
+      <property name="geometry">
+       <rect>
+        <x>930</x>
+        <y>60</y>
+        <width>91</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Arial</family>
+        <pointsize>10</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true"/>
+      </property>
+      <property name="text">
+       <string>Test Method:</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+      </property>
+     </widget>
+     <widget class="QComboBox" name="comboBox_3">
+      <property name="geometry">
+       <rect>
+        <x>1040</x>
+        <y>60</y>
+        <width>121</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Arial</family>
+        <pointsize>10</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: rgb(0, 0, 127);
+background-color: rgb(213, 248, 255);</string>
+      </property>
+      <item>
+       <property name="text">
+        <string>Method A</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Method B</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Method C</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Method D</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Method E</string>
+       </property>
+      </item>
      </widget>
     </widget>
     <widget class="QPushButton" name="pushButton_8">
@@ -1108,38 +1169,11 @@ border-width:4px;</string>
       <enum>Qt::Vertical</enum>
      </property>
     </widget>
-    <widget class="QLabel" name="label_19">
-     <property name="geometry">
-      <rect>
-       <x>510</x>
-       <y>10</y>
-       <width>91</width>
-       <height>31</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <family>Arial</family>
-       <pointsize>10</pointsize>
-       <weight>75</weight>
-       <bold>true</bold>
-      </font>
-     </property>
-     <property name="styleSheet">
-      <string notr="true"/>
-     </property>
-     <property name="text">
-      <string>Test Method:</string>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-     </property>
-    </widget>
     <widget class="QLabel" name="label_20">
      <property name="geometry">
       <rect>
        <x>680</x>
-       <y>60</y>
+       <y>30</y>
        <width>71</width>
        <height>31</height>
       </rect>
@@ -1165,8 +1199,8 @@ border-width:4px;</string>
     <widget class="QLabel" name="label_21">
      <property name="geometry">
       <rect>
-       <x>510</x>
-       <y>60</y>
+       <x>520</x>
+       <y>30</y>
        <width>81</width>
        <height>31</height>
       </rect>
@@ -1192,8 +1226,8 @@ border-width:4px;</string>
     <widget class="QLineEdit" name="lineEdit_9">
      <property name="geometry">
       <rect>
-       <x>620</x>
-       <y>60</y>
+       <x>610</x>
+       <y>30</y>
        <width>61</width>
        <height>31</height>
       </rect>
@@ -1210,7 +1244,7 @@ border-width:4px;</string>
     <widget class="Line" name="line_5">
      <property name="geometry">
       <rect>
-       <x>750</x>
+       <x>760</x>
        <y>0</y>
        <width>20</width>
        <height>171</height>
@@ -1229,9 +1263,9 @@ border-width:4px;</string>
     <widget class="QLabel" name="label_29">
      <property name="geometry">
       <rect>
-       <x>520</x>
-       <y>120</y>
-       <width>71</width>
+       <x>510</x>
+       <y>110</y>
+       <width>91</width>
        <height>31</height>
       </rect>
      </property>
@@ -1247,7 +1281,7 @@ border-width:4px;</string>
       <string notr="true"/>
      </property>
      <property name="text">
-      <string>Load Unit:</string>
+      <string>Load Unit: </string>
      </property>
      <property name="alignment">
       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -1256,8 +1290,8 @@ border-width:4px;</string>
     <widget class="QComboBox" name="comboBox_2">
      <property name="geometry">
       <rect>
-       <x>620</x>
-       <y>120</y>
+       <x>610</x>
+       <y>110</y>
        <width>71</width>
        <height>31</height>
       </rect>
@@ -1582,8 +1616,8 @@ border-width:4px;</string>
      <property name="geometry">
       <rect>
        <x>500</x>
-       <y>100</y>
-       <width>261</width>
+       <y>70</y>
+       <width>271</width>
        <height>20</height>
       </rect>
      </property>
@@ -1645,7 +1679,7 @@ border-width:4px;</string>
       <string notr="true"/>
      </property>
      <property name="text">
-      <string>(Mm)</string>
+      <string>(Sec)</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -1748,58 +1782,11 @@ border-width:4px;</string>
       <string notr="true">color: rgb(170, 85, 127);</string>
      </property>
      <property name="text">
-      <string>Tear Test- Fabric</string>
+      <string>Tear Strength</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
      </property>
-    </widget>
-    <widget class="QComboBox" name="comboBox_3">
-     <property name="geometry">
-      <rect>
-       <x>620</x>
-       <y>10</y>
-       <width>121</width>
-       <height>31</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <family>Arial</family>
-       <pointsize>10</pointsize>
-       <weight>75</weight>
-       <bold>true</bold>
-      </font>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">color: rgb(0, 0, 127);
-background-color: rgb(213, 248, 255);</string>
-     </property>
-     <item>
-      <property name="text">
-       <string>Method A</string>
-      </property>
-     </item>
-     <item>
-      <property name="text">
-       <string>Method B</string>
-      </property>
-     </item>
-     <item>
-      <property name="text">
-       <string>Method C</string>
-      </property>
-     </item>
-     <item>
-      <property name="text">
-       <string>Method D</string>
-      </property>
-     </item>
-     <item>
-      <property name="text">
-       <string>Method E</string>
-      </property>
-     </item>
     </widget>
     <widget class="QLabel" name="label_24">
      <property name="geometry">
