--- a/URmini-Waveshare/ui/01_Main_Page3.ui
+++ b/URmini-Waveshare/ui/01_Main_Page3.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1024</width>
-    <height>600</height>
+    <height>640</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,8 +19,8 @@
      <rect>
       <x>20</x>
       <y>20</y>
-      <width>991</width>
-      <height>531</height>
+      <width>981</width>
+      <height>581</height>
      </rect>
     </property>
     <property name="font">
@@ -46,9 +46,9 @@
     <widget class="QLabel" name="label">
      <property name="geometry">
       <rect>
-       <x>710</x>
+       <x>830</x>
        <y>10</y>
-       <width>271</width>
+       <width>141</width>
        <height>31</height>
       </rect>
      </property>
@@ -138,7 +138,7 @@ color: rgb(255, 0, 0);</string>
        <x>20</x>
        <y>140</y>
        <width>121</width>
-       <height>41</height>
+       <height>51</height>
       </rect>
      </property>
      <property name="font">
@@ -173,9 +173,9 @@ border-width:4px;</string>
      <property name="geometry">
       <rect>
        <x>20</x>
-       <y>200</y>
+       <y>210</y>
        <width>121</width>
-       <height>41</height>
+       <height>51</height>
       </rect>
      </property>
      <property name="font">
@@ -210,9 +210,9 @@ border-width:4px;</string>
      <property name="geometry">
       <rect>
        <x>20</x>
-       <y>260</y>
+       <y>280</y>
        <width>121</width>
-       <height>41</height>
+       <height>51</height>
       </rect>
      </property>
      <property name="font">
@@ -248,9 +248,9 @@ border-width:4px;
      <property name="geometry">
       <rect>
        <x>20</x>
-       <y>320</y>
+       <y>350</y>
        <width>121</width>
-       <height>41</height>
+       <height>51</height>
       </rect>
      </property>
      <property name="font">
@@ -285,9 +285,9 @@ border-width:4px;</string>
      <property name="geometry">
       <rect>
        <x>20</x>
-       <y>440</y>
+       <y>490</y>
        <width>121</width>
-       <height>41</height>
+       <height>51</height>
       </rect>
      </property>
      <property name="font">
@@ -330,7 +330,7 @@ border-width:4px;</string>
      <property name="font">
       <font>
        <family>Arial Narrow</family>
-       <pointsize>11</pointsize>
+       <pointsize>12</pointsize>
        <weight>75</weight>
        <bold>true</bold>
       </font>
@@ -354,7 +354,7 @@ border-width:4px;</string>
      <property name="font">
       <font>
        <family>Arial Narrow</family>
-       <pointsize>11</pointsize>
+       <pointsize>12</pointsize>
        <weight>75</weight>
        <bold>true</bold>
       </font>
@@ -370,9 +370,9 @@ border-width:4px;</string>
      <property name="geometry">
       <rect>
        <x>20</x>
-       <y>380</y>
+       <y>420</y>
        <width>121</width>
-       <height>41</height>
+       <height>51</height>
       </rect>
      </property>
      <property name="font">
@@ -415,7 +415,7 @@ border-width:4px;</string>
      <property name="font">
       <font>
        <family>Arial Narrow</family>
-       <pointsize>10</pointsize>
+       <pointsize>12</pointsize>
       </font>
      </property>
      <property name="styleSheet">
@@ -430,14 +430,14 @@ border-width:4px;</string>
       <rect>
        <x>710</x>
        <y>120</y>
-       <width>211</width>
+       <width>121</width>
        <height>31</height>
       </rect>
      </property>
      <property name="font">
       <font>
        <family>Arial Narrow</family>
-       <pointsize>10</pointsize>
+       <pointsize>12</pointsize>
       </font>
      </property>
      <property name="styleSheet">
@@ -450,7 +450,7 @@ border-width:4px;</string>
     <widget class="QPushButton" name="pushButton_8">
      <property name="geometry">
       <rect>
-       <x>840</x>
+       <x>850</x>
        <y>60</y>
        <width>111</width>
        <height>41</height>
@@ -487,7 +487,7 @@ border-width:4px;</string>
     <widget class="QPushButton" name="pushButton_9">
      <property name="geometry">
       <rect>
-       <x>700</x>
+       <x>710</x>
        <y>60</y>
        <width>111</width>
        <height>41</height>
@@ -527,7 +527,7 @@ border-width:4px;</string>
        <x>160</x>
        <y>160</y>
        <width>801</width>
-       <height>351</height>
+       <height>411</height>
       </rect>
      </property>
      <layout class="QGridLayout" name="gridLayout">
@@ -555,7 +555,7 @@ border-width:4px;</string>
        <x>10</x>
        <y>10</y>
        <width>211</width>
-       <height>101</height>
+       <height>111</height>
       </rect>
      </property>
      <property name="text">
@@ -563,6 +563,30 @@ border-width:4px;</string>
      </property>
      <property name="pixmap">
       <pixmap>../../URmini/images/ARK LOGO.jpg</pixmap>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_8">
+     <property name="geometry">
+      <rect>
+       <x>840</x>
+       <y>120</y>
+       <width>61</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Arial Narrow</family>
+       <pointsize>12</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color: rgb(0, 85, 0);</string>
+     </property>
+     <property name="text">
+      <string>30.9</string>
      </property>
     </widget>
    </widget>
