--- a/URmini-Waveshare/ui/11_patient_save.ui
+++ b/URmini-Waveshare/ui/11_patient_save.ui
@@ -20,12 +20,13 @@
       <x>20</x>
       <y>20</y>
       <width>981</width>
-      <height>531</height>
+      <height>571</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>9</pointsize>
+      <family>Arial Narrow</family>
+      <pointsize>12</pointsize>
      </font>
     </property>
     <property name="autoFillBackground">
@@ -46,9 +47,9 @@
     <widget class="QLabel" name="label">
      <property name="geometry">
       <rect>
-       <x>420</x>
-       <y>100</y>
-       <width>231</width>
+       <x>710</x>
+       <y>160</y>
+       <width>161</width>
        <height>41</height>
       </rect>
      </property>
@@ -67,10 +68,10 @@
     <widget class="QPushButton" name="pushButton_2">
      <property name="geometry">
       <rect>
-       <x>480</x>
-       <y>20</y>
-       <width>101</width>
-       <height>41</height>
+       <x>360</x>
+       <y>40</y>
+       <width>141</width>
+       <height>51</height>
       </rect>
      </property>
      <property name="font">
@@ -82,43 +83,14 @@
       </font>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: rgb(85, 170, 0);</string>
+      <string notr="true">background-color: rgb(85, 170, 0);
+border-radius:20px;
+border-color: rgb(0, 0, 0);
+border-style:outset;
+border-width:4px;</string>
      </property>
      <property name="text">
-      <string>SEARCH</string>
-     </property>
-     <property name="autoDefault">
-      <bool>true</bool>
-     </property>
-     <property name="default">
-      <bool>true</bool>
-     </property>
-     <property name="flat">
-      <bool>false</bool>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="pushButton_4">
-     <property name="geometry">
-      <rect>
-       <x>380</x>
-       <y>270</y>
-       <width>101</width>
-       <height>41</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <family>Arial</family>
-       <pointsize>12</pointsize>
-       <weight>75</weight>
-       <bold>true</bold>
-      </font>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">background-color: rgb(203, 203, 203);</string>
-     </property>
-     <property name="text">
-      <string>DATE</string>
+      <string>Search</string>
      </property>
      <property name="autoDefault">
       <bool>true</bool>
@@ -133,10 +105,10 @@
     <widget class="QPushButton" name="pushButton_5">
      <property name="geometry">
       <rect>
-       <x>350</x>
-       <y>460</y>
-       <width>111</width>
-       <height>31</height>
+       <x>320</x>
+       <y>480</y>
+       <width>151</width>
+       <height>51</height>
       </rect>
      </property>
      <property name="font">
@@ -148,10 +120,14 @@
       </font>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: rgb(203, 203, 203);</string>
+      <string notr="true">background-color: rgb(203, 203, 203);
+border-radius:20px;
+border-color: rgb(0, 0, 0);
+border-style:outset;
+border-width:4px;</string>
      </property>
      <property name="text">
-      <string>VIEW</string>
+      <string>View</string>
      </property>
      <property name="autoDefault">
       <bool>true</bool>
@@ -166,10 +142,10 @@
     <widget class="QPushButton" name="pushButton_6">
      <property name="geometry">
       <rect>
-       <x>190</x>
-       <y>460</y>
-       <width>111</width>
-       <height>31</height>
+       <x>140</x>
+       <y>480</y>
+       <width>141</width>
+       <height>51</height>
       </rect>
      </property>
      <property name="font">
@@ -181,10 +157,14 @@
       </font>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: rgb(231, 154, 115);</string>
+      <string notr="true">border-radius:20px;
+background-color: rgb(255, 85, 0);
+border-color: rgb(0, 0, 0);
+border-style:outset;
+border-width:4px;</string>
      </property>
      <property name="text">
-      <string>SAVE</string>
+      <string>Save</string>
      </property>
      <property name="autoDefault">
       <bool>true</bool>
@@ -199,10 +179,10 @@
     <widget class="QPushButton" name="pushButton_7">
      <property name="geometry">
       <rect>
-       <x>500</x>
-       <y>460</y>
-       <width>111</width>
-       <height>31</height>
+       <x>520</x>
+       <y>480</y>
+       <width>141</width>
+       <height>51</height>
       </rect>
      </property>
      <property name="font">
@@ -214,10 +194,14 @@
       </font>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: rgb(203, 203, 203);</string>
+      <string notr="true">background-color: rgb(203, 203, 203);
+border-radius:20px;
+border-color: rgb(0, 0, 0);
+border-style:outset;
+border-width:4px;</string>
      </property>
      <property name="text">
-      <string>PRINT</string>
+      <string>Print</string>
      </property>
      <property name="autoDefault">
       <bool>true</bool>
@@ -232,38 +216,38 @@
     <widget class="QLabel" name="label_5">
      <property name="geometry">
       <rect>
-       <x>20</x>
-       <y>20</y>
-       <width>141</width>
-       <height>41</height>
+       <x>50</x>
+       <y>40</y>
+       <width>81</width>
+       <height>51</height>
       </rect>
      </property>
      <property name="font">
       <font>
        <family>Arial</family>
-       <pointsize>14</pointsize>
+       <pointsize>12</pointsize>
       </font>
      </property>
      <property name="styleSheet">
       <string notr="true">color: rgb(0, 0, 255);</string>
      </property>
      <property name="text">
-      <string>PATIENT ID:</string>
+      <string>Patient ID:</string>
      </property>
     </widget>
     <widget class="QLineEdit" name="lineEdit">
      <property name="geometry">
       <rect>
-       <x>170</x>
-       <y>20</y>
-       <width>221</width>
-       <height>41</height>
+       <x>180</x>
+       <y>40</y>
+       <width>113</width>
+       <height>51</height>
       </rect>
      </property>
      <property name="font">
       <font>
        <family>Arial</family>
-       <pointsize>14</pointsize>
+       <pointsize>12</pointsize>
        <weight>75</weight>
        <bold>true</bold>
       </font>
@@ -275,9 +259,9 @@
     <widget class="QLabel" name="label_6">
      <property name="geometry">
       <rect>
-       <x>280</x>
-       <y>100</y>
-       <width>121</width>
+       <x>600</x>
+       <y>160</y>
+       <width>101</width>
        <height>41</height>
       </rect>
      </property>
@@ -291,22 +275,28 @@
       <string notr="true">color: rgb(0, 0, 255);</string>
      </property>
      <property name="text">
-      <string>CREATED ON:</string>
+      <string>Created On:</string>
      </property>
     </widget>
     <widget class="Line" name="line">
      <property name="geometry">
       <rect>
-       <x>10</x>
-       <y>80</y>
-       <width>551</width>
-       <height>16</height>
+       <x>40</x>
+       <y>109</y>
+       <width>911</width>
+       <height>31</height>
       </rect>
      </property>
      <property name="font">
       <font>
        <pointsize>9</pointsize>
       </font>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Plain</enum>
+     </property>
+     <property name="lineWidth">
+      <number>2</number>
      </property>
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -315,19 +305,22 @@
     <widget class="QLabel" name="label_2">
      <property name="geometry">
       <rect>
-       <x>780</x>
-       <y>20</y>
-       <width>181</width>
-       <height>41</height>
+       <x>800</x>
+       <y>50</y>
+       <width>161</width>
+       <height>31</height>
       </rect>
      </property>
      <property name="font">
       <font>
        <family>Arial</family>
-       <pointsize>12</pointsize>
+       <pointsize>10</pointsize>
        <weight>75</weight>
        <bold>true</bold>
       </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color: rgb(170, 0, 0);</string>
      </property>
      <property name="text">
       <string>08 Feb 2021 11:44:09</string>
@@ -336,10 +329,10 @@
     <widget class="QLabel" name="label_7">
      <property name="geometry">
       <rect>
-       <x>20</x>
-       <y>100</y>
-       <width>111</width>
-       <height>41</height>
+       <x>140</x>
+       <y>150</y>
+       <width>91</width>
+       <height>51</height>
       </rect>
      </property>
      <property name="font">
@@ -352,16 +345,16 @@
       <string notr="true">color: rgb(0, 0, 255);</string>
      </property>
      <property name="text">
-      <string>PATIENT ID:</string>
+      <string>Patient ID:</string>
      </property>
     </widget>
     <widget class="QLabel" name="label_3">
      <property name="geometry">
       <rect>
-       <x>170</x>
-       <y>100</y>
-       <width>81</width>
-       <height>41</height>
+       <x>270</x>
+       <y>150</y>
+       <width>121</width>
+       <height>51</height>
       </rect>
      </property>
      <property name="font">
@@ -382,9 +375,9 @@
     <widget class="QLabel" name="label_8">
      <property name="geometry">
       <rect>
-       <x>20</x>
-       <y>150</y>
-       <width>101</width>
+       <x>140</x>
+       <y>210</y>
+       <width>91</width>
        <height>51</height>
       </rect>
      </property>
@@ -398,20 +391,21 @@
       <string notr="true">color: rgb(0, 0, 255);</string>
      </property>
      <property name="text">
-      <string>GENDER:</string>
+      <string>Gender:</string>
      </property>
     </widget>
     <widget class="QRadioButton" name="radioButton">
      <property name="geometry">
       <rect>
-       <x>170</x>
-       <y>160</y>
+       <x>270</x>
+       <y>210</y>
        <width>61</width>
-       <height>31</height>
+       <height>51</height>
       </rect>
      </property>
      <property name="font">
       <font>
+       <family>Arial</family>
        <pointsize>12</pointsize>
       </font>
      </property>
@@ -425,10 +419,10 @@
     <widget class="QRadioButton" name="radioButton_2">
      <property name="geometry">
       <rect>
-       <x>300</x>
-       <y>160</y>
+       <x>380</x>
+       <y>210</y>
        <width>82</width>
-       <height>31</height>
+       <height>51</height>
       </rect>
      </property>
      <property name="font">
@@ -441,54 +435,11 @@
       <string>Female</string>
      </property>
     </widget>
-    <widget class="QLabel" name="label_9">
-     <property name="geometry">
-      <rect>
-       <x>20</x>
-       <y>280</y>
-       <width>71</width>
-       <height>41</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <family>Arial</family>
-       <pointsize>12</pointsize>
-      </font>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">color: rgb(0, 0, 255);</string>
-     </property>
-     <property name="text">
-      <string>DOB :</string>
-     </property>
-    </widget>
-    <widget class="QLineEdit" name="lineEdit_2">
-     <property name="geometry">
-      <rect>
-       <x>150</x>
-       <y>280</y>
-       <width>171</width>
-       <height>31</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <family>Arial</family>
-       <pointsize>12</pointsize>
-       <weight>75</weight>
-       <bold>true</bold>
-      </font>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">background-color: rgb(255, 255, 255);</string>
-     </property>
-    </widget>
     <widget class="QLabel" name="label_10">
      <property name="geometry">
       <rect>
-       <x>550</x>
-       <y>270</y>
+       <x>710</x>
+       <y>330</y>
        <width>51</width>
        <height>41</height>
       </rect>
@@ -503,36 +454,15 @@
       <string notr="true">color: rgb(0, 0, 255);</string>
      </property>
      <property name="text">
-      <string>AGE :</string>
-     </property>
-    </widget>
-    <widget class="QLabel" name="label_4">
-     <property name="geometry">
-      <rect>
-       <x>620</x>
-       <y>270</y>
-       <width>61</width>
-       <height>41</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <family>Arial</family>
-       <pointsize>12</pointsize>
-       <weight>75</weight>
-       <bold>true</bold>
-      </font>
-     </property>
-     <property name="text">
-      <string>0001</string>
+      <string>Age:</string>
      </property>
     </widget>
     <widget class="QLabel" name="label_11">
      <property name="geometry">
       <rect>
-       <x>690</x>
-       <y>270</y>
-       <width>61</width>
+       <x>850</x>
+       <y>330</y>
+       <width>41</width>
        <height>41</height>
       </rect>
      </property>
@@ -552,14 +482,15 @@
     <widget class="QLabel" name="label_12">
      <property name="geometry">
       <rect>
-       <x>20</x>
-       <y>350</y>
+       <x>140</x>
+       <y>380</y>
        <width>101</width>
-       <height>41</height>
+       <height>51</height>
       </rect>
      </property>
      <property name="font">
       <font>
+       <family>Arial</family>
        <pointsize>12</pointsize>
       </font>
      </property>
@@ -567,22 +498,24 @@
       <string notr="true">color: rgb(0, 0, 255);</string>
      </property>
      <property name="text">
-      <string>DOCTORS :</string>
+      <string>Doctors :</string>
      </property>
     </widget>
     <widget class="QComboBox" name="comboBox_2">
      <property name="geometry">
       <rect>
-       <x>150</x>
-       <y>360</y>
-       <width>421</width>
-       <height>41</height>
+       <x>270</x>
+       <y>380</y>
+       <width>381</width>
+       <height>51</height>
       </rect>
      </property>
      <property name="font">
       <font>
        <family>Arial</family>
        <pointsize>12</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
       </font>
      </property>
      <item>
@@ -609,10 +542,10 @@
     <widget class="QPushButton" name="pushButton_8">
      <property name="geometry">
       <rect>
-       <x>620</x>
-       <y>20</y>
-       <width>101</width>
-       <height>41</height>
+       <x>550</x>
+       <y>40</y>
+       <width>141</width>
+       <height>51</height>
       </rect>
      </property>
      <property name="font">
@@ -624,10 +557,14 @@
       </font>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: rgb(85, 170, 0);</string>
+      <string notr="true">background-color: rgb(85, 170, 0);
+border-radius:20px;
+border-color: rgb(0, 0, 0);
+border-style:outset;
+border-width:4px;</string>
      </property>
      <property name="text">
-      <string>RETURN</string>
+      <string>Return</string>
      </property>
      <property name="autoDefault">
       <bool>true</bool>
@@ -642,9 +579,9 @@
     <widget class="QLabel" name="label_13">
      <property name="geometry">
       <rect>
-       <x>20</x>
-       <y>210</y>
-       <width>81</width>
+       <x>140</x>
+       <y>270</y>
+       <width>101</width>
        <height>41</height>
       </rect>
      </property>
@@ -658,16 +595,16 @@
       <string notr="true">color: rgb(0, 0, 255);</string>
      </property>
      <property name="text">
-      <string>NAME:</string>
+      <string>Name :</string>
      </property>
     </widget>
     <widget class="QLineEdit" name="lineEdit_3">
      <property name="geometry">
       <rect>
-       <x>150</x>
-       <y>210</y>
-       <width>171</width>
-       <height>31</height>
+       <x>270</x>
+       <y>270</y>
+       <width>191</width>
+       <height>41</height>
       </rect>
      </property>
      <property name="font">
@@ -685,10 +622,10 @@
     <widget class="QLineEdit" name="lineEdit_4">
      <property name="geometry">
       <rect>
-       <x>370</x>
-       <y>210</y>
-       <width>171</width>
-       <height>31</height>
+       <x>490</x>
+       <y>270</y>
+       <width>191</width>
+       <height>41</height>
       </rect>
      </property>
      <property name="font">
@@ -706,10 +643,10 @@
     <widget class="QLineEdit" name="lineEdit_5">
      <property name="geometry">
       <rect>
-       <x>610</x>
-       <y>210</y>
-       <width>151</width>
-       <height>31</height>
+       <x>710</x>
+       <y>270</y>
+       <width>181</width>
+       <height>41</height>
       </rect>
      </property>
      <property name="font">
@@ -727,10 +664,10 @@
     <widget class="QPushButton" name="pushButton_9">
      <property name="geometry">
       <rect>
-       <x>640</x>
-       <y>460</y>
-       <width>121</width>
-       <height>31</height>
+       <x>710</x>
+       <y>480</y>
+       <width>141</width>
+       <height>51</height>
       </rect>
      </property>
      <property name="font">
@@ -742,10 +679,14 @@
       </font>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: rgb(203, 203, 203);</string>
+      <string notr="true">background-color: rgb(203, 203, 203);
+border-radius:20px;
+border-color: rgb(0, 0, 0);
+border-style:outset;
+border-width:4px;</string>
      </property>
      <property name="text">
-      <string>RESET</string>
+      <string>Reset</string>
      </property>
      <property name="autoDefault">
       <bool>true</bool>
@@ -757,29 +698,25 @@
       <bool>false</bool>
      </property>
     </widget>
-    <widget class="QCalendarWidget" name="calendarWidget">
+    <widget class="QLineEdit" name="lineEdit_6">
      <property name="geometry">
       <rect>
-       <x>540</x>
-       <y>110</y>
-       <width>391</width>
-       <height>201</height>
+       <x>770</x>
+       <y>330</y>
+       <width>61</width>
+       <height>41</height>
       </rect>
      </property>
      <property name="font">
       <font>
+       <family>Arial</family>
        <pointsize>12</pointsize>
        <weight>75</weight>
        <bold>true</bold>
       </font>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: rgb(255, 237, 240);
-border-color: rgb(0, 0, 0);
-color: rgb(0, 0, 0);</string>
-     </property>
-     <property name="gridVisible">
-      <bool>true</bool>
+      <string notr="true">background-color: rgb(255, 255, 255);</string>
      </property>
     </widget>
    </widget>
